App/Receipt: on the order-panel tab prevent partly collapsing the receipt's buttons on small screens

--- a/assets/app/src/styles/sections.scss
+++ b/assets/app/src/styles/sections.scss
@@ -245,6 +245,7 @@
 			flex: 1;
 			padding-top: 46px;
 			width: auto;
+			overflow: hidden;
 
 			.section-topic {
 				right: 0px;
